--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-young-art-a4auyki8-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="tsO4rUHIjFK1"
 POSTGRES_DATABASE="verceldb"
+
+AUTH_SECRET=CNtdv9uJ7UOxj5ty71Nv6FHE1Mf/3eX2/85QSBn/Hg8=
+
+MERCADOPAGO_PUBLIC_KEY="TEST-80b30cb4-3525-4f68-aa31-415e2bf5b8c7"
+MERCADOPAGO_ACCESS_TOKEN="TEST-656614314207909-060408-3c28e55ab7d3fcc59a39b3797efed9fb-689081899"
