--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "mercadopago": "^2.0.9",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "use-debounce": "^10.0.0",
@@ -22,6 +25,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
