--- a/.env
+++ b/.env
@@ -11,3 +11,12 @@ AUTH_SECRET=CNtdv9uJ7UOxj5ty71Nv6FHE1Mf/3eX2/85QSBn/Hg8=
 
 MERCADOPAGO_PUBLIC_KEY="TEST-80b30cb4-3525-4f68-aa31-415e2bf5b8c7"
 MERCADOPAGO_ACCESS_TOKEN="TEST-656614314207909-060408-3c28e55ab7d3fcc59a39b3797efed9fb-689081899"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dppaqcnzk"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="881875348987577"
+
+CLOUDINARY_CLOUD_NAME="dppaqcnzk"
+CLOUDINARY_API_KEY="881875348987577"
+CLOUDINARY_API_SECRET="jnoIrwAp1NXOzmsju4i9kNrGHY4"
+
+CLOUDINARY_URL="cloudinary://881875348987577:jnoIrwAp1NXOzmsju4i9kNrGHY4@dppaqcnzk"
