--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroicons/react": "^2.1.3",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "mercadopago": "^2.0.9",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
     "use-debounce": "^10.0.0",
