--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.395.0",
     "mercadopago": "^2.0.9",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
