--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
